--- a/package.json
+++ b/package.json
@@ -2,10 +2,22 @@
   "name": "helo-simulation",
   "version": "0.1.0",
   "private": true,
+  "main": "/server/server.js",
+  "proxy": "http://localhost:3035/",
   "dependencies": {
+    "auth0-lock": "^11.0.1",
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "massive": "^4.6.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
