--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "helo-simulation",
   "version": "0.1.0",
   "private": true,
-  "main": "/server/server.js",
+  "main": "server/server.js",
   "proxy": "http://localhost:3035/",
   "dependencies": {
     "auth0-lock": "^11.0.1",
